@@ -1,3 +1,8 @@
+2002-02-11  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am: "make dep-am".
+	* Makefile.in: Regenerate.
+
 2002-02-10  Daniel Jacobowitz  <drow@mvista.com>
 
 	* gprof.c: Include "getopt.h" after other includes, so that
